--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Web-Studio</title>
 
+  <link href="
+  https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
+  " rel="stylesheet">
+
   <link rel="stylesheet" href="./scc/styles.css">
 
 
@@ -25,92 +29,106 @@
 
   <!--head-->
   <header class="header">
+    <div class="container">
+      <nav>
+        <a href="./index.html" class="logo-second"> <span class="logo-fisrt">Web</span>Studio</a>
 
-    <nav>
-      <a href="./index.html" class="logo-second"> <span class="logo-fisrt">Web</span>Studio</a>
+        <ul class="site-nav">
+          <li> <a href="./index.html" class="nav-link current">Studio</a></li>
+          <li> <a href="./portfolio.html" class="nav-link">Portfolio</a></li>
+          <li> <a href="" class="nav-link">Contacts</a></li>
+        </ul>
+      </nav>
 
-      <ul class="site-nav">
-        <li> <a href="./index.html" class="nav-link current">Studio</a></li>
-        <li> <a href="./portfolio.html" class="nav-link">Portfolio</a></li>
-        <li> <a href="" class="nav-link">Contacts</a></li>
-      </ul>
-    </nav>
-    <address>
-      <ul class="address">
-        <li>
-          <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com </a>
-        </li>
-        <li>
-          <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
 
-        </li>
-      </ul>
+      <address>
+        <ul class="address">
+          <li>
+            <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com </a>
+          </li>
+          <li>
+            <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
 
-    </address>
+          </li>
+        </ul>
+
+      </address>
+    </div>
+
   </header>
   <!--content-->
   <main>
     <section class="hero">
-      <h1 class="hero-title">Effective Solutions for Your Business</h1>
-      <button type="button" class="button-hero">Order Service</button>
+      <div class="container">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="button-hero">Order Service</button>
+      </div>
+
     </section>
     <section>
-      <h2 hidden>features</h2>
-      <ul>
-        <li>
-          <h3 class="section-subtile">Strategy</h3>
-          <p class="section-paragraph">Our goal is to identify the business
-            problem to walk away with the perfect and creative solution.</p>
-        </li>
-        <li>
-          <h3 class="section-subtile">Punctuality</h3>
-          <p class="section-paragraph">Bring the key message to the brand's audience for the best price within the
-            shortest possible
-            time.</p>
-        </li>
-        <li>
-          <h3 class="section-subtile">Diligence</h3>
-          <p class="section-paragraph">Research and confirm brands that present the strongest digital growth
-            opportunities and minimize
-            risk.</p>
-        </li>
-        <li>
-          <h3 class="section-subtile">Technologies</h3>
-          <p class="section-paragraph">Design practice focused on digital experiences. We bring forth a deep passion for
-            problem-solving.</p>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 hidden>features</h2>
+        <ul class="features-list">
+          <li>
+            <h3 class="section-subtile">Strategy</h3>
+            <p class="section-paragraph">Our goal is to identify the business
+              problem to walk away with the perfect and creative solution.</p>
+          </li>
+          <li>
+            <h3 class="section-subtile">Punctuality</h3>
+            <p class="section-paragraph">Bring the key message to the brand's audience for the best price within the
+              shortest possible
+              time.</p>
+          </li>
+          <li>
+            <h3 class="section-subtile">Diligence</h3>
+            <p class="section-paragraph">Research and confirm brands that present the strongest digital growth
+              opportunities and minimize
+              risk.</p>
+          </li>
+          <li>
+            <h3 class="section-subtile">Technologies</h3>
+            <p class="section-paragraph">Design practice focused on digital experiences. We bring forth a deep passion
+              for
+              problem-solving.</p>
+          </li>
+        </ul>
+      </div>
     </section>
     <section>
-      <h2 class="section-title">What are we doing</h2>
-      <ul>
-        <li><img src="./images/computer-screen.jpg" alt="computer-screen" width="360" height="300">
-        </li>
-        <li><img src="./images/telephones.jpg" alt="telephones" width="360" height="300"></li>
-        <li><img src="./images/laptop-and-phone.jpg" alt="laptop-and-phone" width="360" height="300"></li>
-      </ul>
+      <div class="container">
+        <h2 class="section-title">What are we doing</h2>
+        <ul class="section-img">
+          <li><img src="./images/computer-screen.jpg" alt="computer-screen" width="360" height="300">
+          </li>
+          <li><img src="./images/telephones.jpg" alt="telephones" width="360" height="300"></li>
+          <li><img src="./images/laptop-and-phone.jpg" alt="laptop-and-phone" width="360" height="300"></li>
+        </ul>
+      </div>
     </section>
     <section class="Our-Team">
-      <h2 class="section-title">Our Team</h2>
-      <ul>
-        <li class="team"><img src="./images/Mark-Guerrero.jpg" alt=" Mark-Guerrero-Product-Designer" width="264"
-            height="260">
-          <h3 class="section-subtile">Mark Guerrero</h3>
-          <p class="section-paragraph">Product Designer</p>
-        </li>
-        <li class="team"><img src="./images/Tom-Ford.jpg" alt=" Tom Ford Frontend Developer" width="264" height="260">
-          <h3 class="section-subtile">Tom Ford</h3>
-          <p class="section-paragraph">Frontend Developer</p>
-        </li>
-        <li class="team"><img src="./images/Camila-Garcia.jpg" alt="Camila Garcia Marketing" width="264" height="260">
-          <h3 class="section-subtile">Camila Garcia</h3>
-          <p class="section-paragraph">Marketing</p>
-        </li>
-        <li class="team"><img src="./images/Daniel-Wilson.jpg" alt="UI Designer" width="264" height="260">
-          <h3 class="section-subtile">Daniel Wilson</h3>
-          <p class="section-paragraph">UI Designer</p>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team"><img src="./images/Mark-Guerrero.jpg" alt=" Mark-Guerrero-Product-Designer" width="264"
+              height="260">
+            <h3 class="section-subtile">Mark Guerrero</h3>
+            <p class="section-paragraph">Product Designer</p>
+          </li>
+          <li class="team"><img src="./images/Tom-Ford.jpg" alt=" Tom Ford Frontend Developer" width="264" height="260">
+            <h3 class="section-subtile">Tom Ford</h3>
+            <p class="section-paragraph">Frontend Developer</p>
+          </li>
+          <li class="team"><img src="./images/Camila-Garcia.jpg" alt="Camila Garcia Marketing" width="264" height="260">
+            <h3 class="section-subtile">Camila Garcia</h3>
+            <p class="section-paragraph">Marketing</p>
+          </li>
+          <li class="team"><img src="./images/Daniel-Wilson.jpg" alt="UI Designer" width="264" height="260">
+            <h3 class="section-subtile">Daniel Wilson</h3>
+            <p class="section-paragraph">UI Designer</p>
+          </li>
+        </ul>
+      </div>
     </section>
 
 
