--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 
+    <link href="
+    https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
+    " rel="stylesheet">
+
     <link rel="stylesheet" href="./scc/styles.css">
 
     <!--font-family-->
