--- a/index.html
+++ b/index.html
@@ -30,36 +30,46 @@
   <!--head-->
   <header class="header">
     <div class="container">
-      <nav>
-        <a href="./index.html" class="logo-second"> <span class="logo-fisrt">Web</span>Studio</a>
+      <div class="nav-address">
+        <nav>
+          <div class="container-nav">
+            <a href="./index.html" class="logo-second logo"> <span class="logo-fisrt">Web</span>Studio</a>
 
-        <ul class="site-nav">
-          <li> <a href="./index.html" class="nav-link current">Studio</a></li>
-          <li> <a href="./portfolio.html" class="nav-link">Portfolio</a></li>
-          <li> <a href="" class="nav-link">Contacts</a></li>
-        </ul>
-      </nav>
+            <ul class="site-nav">
+              <li> <a href="./index.html" class="nav-link current">Studio</a></li>
+              <li> <a href="./portfolio.html" class="nav-link">Portfolio</a></li>
+              <li> <a href="" class="nav-link">Contacts</a></li>
+            </ul>
+          </div>
+        </nav>
 
 
-      <address>
-        <ul class="address">
-          <li>
-            <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com </a>
-          </li>
-          <li>
-            <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
 
-          </li>
-        </ul>
 
-      </address>
+        <address>
+          <div class="address-container">
+            <ul class="address">
+              <li>
+                <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com </a>
+              </li>
+              <li>
+                <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+
+              </li>
+            </ul>
+          </div>
+
+
+        </address>
+      </div>
+
     </div>
 
   </header>
   <!--content-->
   <main>
     <section class="hero">
-      <div class="container">
+      <div class="container ">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button-hero">Order Service</button>
       </div>
@@ -136,10 +146,13 @@
   </main>
   <!--footer-->
   <footer class="footer">
-    <a href="./index.html" class="logo-second"> <span class="logo-fisrt">Web</span>Studio</a>
+    <div class="container block-footer">
+      <a href="./index.html" class="logo-second"> <span class="logo-fisrt">Web</span>Studio</a>
 
-    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
-      solutions.</p>
+      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
+        solutions.</p>
+    </div>
+
 
   </footer>
 
