--- a/portfolio.html
+++ b/portfolio.html
@@ -27,29 +27,44 @@
 
     <!--head-->
     <header class="header">
+        <div class="container">
+            <div class="nav-address">
+                <nav>
+                    <div class="container-nav">
+                        <a href="./index.html" class="logo-second logo"> <span class="logo-fisrt">Web</span>Studio</a>
 
-        <nav>
-            <a href="./index.html" class="logo-second"> <span class="logo-fisrt">Web</span>Studio</a>
+                        <ul class="site-nav">
+                            <li> <a href="./index.html" class="nav-link">Studio</a></li>
+                            <li> <a href="./portfolio.html" class="nav-link current">Portfolio</a></li>
+                            <li> <a href="" class="nav-link">Contacts</a></li>
+                        </ul>
+                    </div>
+                </nav>
 
-            <ul class="site-nav">
-                <li> <a href="./index.html" class="nav-link">Studio</a></li>
-                <li> <a href="./portfolio.html" class="nav-link current">Portfolio</a></li>
-                <li> <a href="" class="nav-link">Contacts</a></li>
-            </ul>
-        </nav>
-        <address>
-            <ul class="address">
-                <li>
-                    <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com </a>
-                </li>
-                <li>
-                    <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
 
-                </li>
-            </ul>
 
-        </address>
+
+                <address>
+                    <div class="address-container">
+                        <ul class="address">
+                            <li>
+                                <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com </a>
+                            </li>
+                            <li>
+                                <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+
+                            </li>
+                        </ul>
+                    </div>
+
+
+                </address>
+            </div>
+
+        </div>
+
     </header>
+
     <main>
 
 
@@ -126,11 +141,14 @@
 
     <!--footer-->
     <footer class="footer">
-        <a href="./index.html" class="logo-second"> <span class="logo-fisrt">Web</span>Studio</a>
+        <div class="container block-footer">
+            <a href="./index.html" class="logo-second"> <span class="logo-fisrt">Web</span>Studio</a>
 
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-            growth
-            solutions.</p>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+                growth
+                solutions.</p>
+        </div>
+
 
     </footer>
 
