finished work portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,70 +69,80 @@
 
 
         <section>
-            <h1 hidden>Job filter</h1>
-            <ul>
-                <li><button type="button" class="button-filter">All</button>
-                </li>
-                <li><button type="button" class="button-filter">Web Site</button>
-                </li>
-                <li><button type="button" class="button-filter">App</button>
-                </li>
-                <li><button type="button" class="button-filter">Design</button>
-                </li>
-                <li><button type="button" class="button-filter">Marketing</button>
-                </li>
-            </ul>
-            <ul>
-                <li class="filter-item">
-                    <img src="./images/banking-app.jpg" alt="Banking App Interface Concept" width="360" height="300">
-                    <h2 class="section-subtile">Banking App Interface Concept</h2>
-                    <p class="section-paragraph">App</p>
-                </li>
-                <li class="filter-item">
-                    <img src="./images/cashless-payment.jpg" alt=" qr code payment by phone" width="360" height="300">
-                    <h2 class="section-subtile">Cashless Payment</h2>
-                    <p class="section-paragraph">Marketing</p>
-                </li>
-                <li class="filter-item">
-                    <img src="./images/meditation-app.jpg" alt="medetation app for phone and laptop" width="360"
-                        height="300">
-                    <h2 class="section-subtile">Meditaion App</h2>
-                    <p class="section-paragraph"> App</p>
-                </li>
-                <li class="filter-item">
-                    <img src="./images/taxi-service.jpg" alt="app for taxi in the car" width="360" height="300">
-                    <h2 class="section-subtile">Taxi Service</h2>
-                    <p class="section-paragraph"> Marketing</p>
-                </li>
-                <li class="filter-item">
-                    <img src="./images/screen-illustrations.jpg" alt="screen illustrations on the phone" width="360"
-                        height="300">
-                    <h2 class="section-subtile">Screen Illustrations</h2>
-                    <p class="section-paragraph">Design</p>
+            <div class="container">
+                <h1 hidden>Job filter</h1>
+                <ul class="list-filter">
+                    <li><button type="button" class="button-filter">All</button>
+                    </li>
+                    <li><button type="button" class="button-filter">Web Site</button>
+                    </li>
+                    <li><button type="button" class="button-filter">App</button>
+                    </li>
+                    <li><button type="button" class="button-filter">Design</button>
+                    </li>
+                    <li><button type="button" class="button-filter">Marketing</button>
+                    </li>
+                </ul>
+                <div class="flex-container">
 
-                </li>
-                <li class="filter-item">
-                    <img src="./images/online-courses.jpg" alt="the girl conducts an online course" width="360"
-                        height="300">
-                    <h2 class="section-subtile">Online Courses</h2>
-                    <p class="section-paragraph"> Marketing</p>
-                </li>
-                <li class="filter-item">
-                    <img src="./images/inst-stories.jpg" alt="Instagram Stories Concept" width="360" height="300">
-                    <h2 class="section-subtile">Instagram Stories Concept</h2>
-                    <p class="section-paragraph">Design</p>
-                </li>
-                <li class="filter-item">
-                    <img src="./images/organic-food.jpg" alt="Organic Food" width="360" height="300">
-                    <h2 class="section-subtile">Organic Food</h2>
-                    <p class="section-paragraph">Web Site</p>
-                </li>
-                <li class="filter-item">
-                    <img src="./images/fresh-coffe.jpg" alt="making coffe" width="360" height="300">
-                    <h2 class="section-subtile">Fresh Coffee</h2>
-                    <p class="section-paragraph">Web Site</p>
-                </li>
-            </ul>
+                    <ul class="list-element-filter">
+                        <li class="filter-item">
+                            <img src="./images/banking-app.jpg" alt="Banking App Interface Concept" width="360"
+                                height="300">
+                            <h2 class="section-subtile">Banking App Interface Concept</h2>
+                            <p class="section-paragraph">App</p>
+                        </li>
+                        <li class="filter-item">
+                            <img src="./images/cashless-payment.jpg" alt=" qr code payment by phone" width="360"
+                                height="300">
+                            <h2 class="section-subtile">Cashless Payment</h2>
+                            <p class="section-paragraph">Marketing</p>
+                        </li>
+                        <li class="filter-item">
+                            <img src="./images/meditation-app.jpg" alt="medetation app for phone and laptop" width="360"
+                                height="300">
+                            <h2 class="section-subtile">Meditaion App</h2>
+                            <p class="section-paragraph"> App</p>
+                        </li>
+                        <li class="filter-item">
+                            <img src="./images/taxi-service.jpg" alt="app for taxi in the car" width="360" height="300">
+                            <h2 class="section-subtile">Taxi Service</h2>
+                            <p class="section-paragraph"> Marketing</p>
+                        </li>
+                        <li class="filter-item">
+                            <img src="./images/screen-illustrations.jpg" alt="screen illustrations on the phone"
+                                width="360" height="300">
+                            <h2 class="section-subtile">Screen Illustrations</h2>
+                            <p class="section-paragraph">Design</p>
+
+                        </li>
+                        <li class="filter-item">
+                            <img src="./images/online-courses.jpg" alt="the girl conducts an online course" width="360"
+                                height="300">
+                            <h2 class="section-subtile">Online Courses</h2>
+                            <p class="section-paragraph"> Marketing</p>
+                        </li>
+                        <li class="filter-item">
+                            <img src="./images/inst-stories.jpg" alt="Instagram Stories Concept" width="360"
+                                height="300">
+                            <h2 class="section-subtile">Instagram Stories Concept</h2>
+                            <p class="section-paragraph">Design</p>
+                        </li>
+                        <li class="filter-item">
+                            <img src="./images/organic-food.jpg" alt="Organic Food" width="360" height="300">
+                            <h2 class="section-subtile">Organic Food</h2>
+                            <p class="section-paragraph">Web Site</p>
+                        </li>
+                        <li class="filter-item">
+                            <img src="./images/fresh-coffe.jpg" alt="making coffe" width="360" height="300">
+                            <h2 class="section-subtile">Fresh Coffee</h2>
+                            <p class="section-paragraph">Web Site</p>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+
         </section>
 
     </main>
