--- a/portfolio.html
+++ b/portfolio.html
@@ -27,42 +27,33 @@
 
     <!--head-->
     <header class="header">
-        <div class="container">
-            <div class="nav-address">
-                <nav>
-                    <div class="container-nav">
-                        <a href="./index.html" class="logo-second logo"> <span class="logo-fisrt">Web</span>Studio</a>
 
-                        <ul class="site-nav">
-                            <li> <a href="./index.html" class="nav-link">Studio</a></li>
-                            <li> <a href="./portfolio.html" class="nav-link current">Portfolio</a></li>
-                            <li> <a href="" class="nav-link">Contacts</a></li>
-                        </ul>
-                    </div>
-                </nav>
+        <div class="container header-container">
+
+            <nav class="container-nav">
+                <a href="./index.html" class="logo-second logo"> <span class="logo-fisrt">Web</span>Studio</a>
+                <ul class="site-nav">
+                    <li> <a href="./index.html" class="nav-link">Studio</a></li>
+                    <li> <a href="./portfolio.html" class="nav-link current">Portfolio</a></li>
+                    <li> <a href="" class="nav-link">Contacts</a></li>
+                </ul>
+            </nav>
 
 
+            <address>
 
+                <ul class="address">
+                    <li>
+                        <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com </a>
+                    </li>
+                    <li>
+                        <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
 
-                <address>
-                    <div class="address-container">
-                        <ul class="address">
-                            <li>
-                                <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com </a>
-                            </li>
-                            <li>
-                                <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
 
-                            </li>
-                        </ul>
-                    </div>
-
-
-                </address>
-            </div>
-
+            </address>
         </div>
-
     </header>
 
     <main>
@@ -83,63 +74,101 @@
                     <li><button type="button" class="button-filter">Marketing</button>
                     </li>
                 </ul>
-                <div class="flex-container">
 
-                    <ul class="list-element-filter">
-                        <li class="filter-item">
-                            <img src="./images/banking-app.jpg" alt="Banking App Interface Concept" width="360"
-                                height="300">
+
+                <ul class="list-element-filter">
+                    <li class="filter-item">
+                        <a href=""><img src="./images/banking-app.jpg" alt="Banking App Interface Concept" width="360"
+                                height="300"></a>
+
+                        <div class="project-container">
                             <h2 class="section-subtile">Banking App Interface Concept</h2>
                             <p class="section-paragraph">App</p>
-                        </li>
-                        <li class="filter-item">
-                            <img src="./images/cashless-payment.jpg" alt=" qr code payment by phone" width="360"
-                                height="300">
+                        </div>
+
+                    </li>
+                    <li class="filter-item">
+                        <a href=""> <img src="./images/cashless-payment.jpg" alt=" qr code payment by phone" width="360"
+                                height="300"></a>
+
+                        <div class="project-container">
                             <h2 class="section-subtile">Cashless Payment</h2>
                             <p class="section-paragraph">Marketing</p>
-                        </li>
-                        <li class="filter-item">
-                            <img src="./images/meditation-app.jpg" alt="medetation app for phone and laptop" width="360"
-                                height="300">
+                        </div>
+
+                    </li>
+                    <li class="filter-item">
+                        <a href=""><img src="./images/meditation-app.jpg" alt="medetation app for phone and laptop"
+                                width="360" height="300"></a>
+
+                        <div class="project-container">
                             <h2 class="section-subtile">Meditaion App</h2>
                             <p class="section-paragraph"> App</p>
-                        </li>
-                        <li class="filter-item">
-                            <img src="./images/taxi-service.jpg" alt="app for taxi in the car" width="360" height="300">
+                        </div>
+
+                    </li>
+                    <li class="filter-item">
+                        <a href=""><img src="./images/taxi-service.jpg" alt="app for taxi in the car" width="360"
+                                height="300"></a>
+
+                        <div class="project-container">
                             <h2 class="section-subtile">Taxi Service</h2>
                             <p class="section-paragraph"> Marketing</p>
-                        </li>
-                        <li class="filter-item">
-                            <img src="./images/screen-illustrations.jpg" alt="screen illustrations on the phone"
-                                width="360" height="300">
+                        </div>
+
+                    </li>
+                    <li class="filter-item">
+                        <a href=""><img src="./images/screen-illustrations.jpg" alt="screen illustrations on the phone"
+                                width="360" height="300"></a>
+
+                        <div class="project-container">
                             <h2 class="section-subtile">Screen Illustrations</h2>
                             <p class="section-paragraph">Design</p>
+                        </div>
 
-                        </li>
-                        <li class="filter-item">
-                            <img src="./images/online-courses.jpg" alt="the girl conducts an online course" width="360"
-                                height="300">
+
+                    </li>
+                    <li class="filter-item">
+                        <a href=""><img src="./images/online-courses.jpg" alt="the girl conducts an online course"
+                                width="360" height="300"></a>
+
+                        <div class="project-container">
                             <h2 class="section-subtile">Online Courses</h2>
                             <p class="section-paragraph"> Marketing</p>
-                        </li>
-                        <li class="filter-item">
-                            <img src="./images/inst-stories.jpg" alt="Instagram Stories Concept" width="360"
-                                height="300">
+                        </div>
+
+                    </li>
+                    <li class="filter-item">
+                        <a href=""><img src="./images/inst-stories.jpg" alt="Instagram Stories Concept" width="360"
+                                height="300"></a>
+
+                        <div class="project-container">
                             <h2 class="section-subtile">Instagram Stories Concept</h2>
                             <p class="section-paragraph">Design</p>
-                        </li>
-                        <li class="filter-item">
-                            <img src="./images/organic-food.jpg" alt="Organic Food" width="360" height="300">
+                        </div>
+
+                    </li>
+                    <li class="filter-item">
+                        <a href=""> <img src="./images/organic-food.jpg" alt="Organic Food" width="360"
+                                height="300"></a>
+
+                        <div class="project-container">
                             <h2 class="section-subtile">Organic Food</h2>
                             <p class="section-paragraph">Web Site</p>
-                        </li>
-                        <li class="filter-item">
-                            <img src="./images/fresh-coffe.jpg" alt="making coffe" width="360" height="300">
+                        </div>
+
+                    </li>
+                    <li class="filter-item">
+                        <a href=""><img src="./images/fresh-coffe.jpg" alt="making coffe" width="360" height="300"></a>
+
+                        <div class="project-container">
                             <h2 class="section-subtile">Fresh Coffee</h2>
                             <p class="section-paragraph">Web Site</p>
-                        </li>
-                    </ul>
-                </div>
+                        </div>
+
+                    </li>
+                </ul>
+
 
             </div>
 
@@ -150,8 +179,8 @@
 
 
     <!--footer-->
-    <footer class="footer">
-        <div class="container block-footer">
+    <footer class="section-footer">
+        <div class="container container-footer">
             <a href="./index.html" class="logo-second"> <span class="logo-fisrt">Web</span>Studio</a>
 
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
@@ -161,6 +190,7 @@
 
 
     </footer>
+
 
 
 </body>
