--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
   </header>
   <!--content-->
   <main>
-    <section>
-      <div class="container hero">
+    <section class="hero">
+      <div class="container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button-hero">Order Service</button>
       </div>
 
     </section>
-    <section>
-      <div class="container features">
-        <h2 hidden>features</h2>
+    <section class="features">
+      <div class="container">
+        <h2 class="visually-hidden">features</h2>
         <ul class="features-list">
           <li>
             <h3 class="section-subtile">Strategy</h3>
