--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
     <main>
 
 
-        <section>
+        <section class="portfolio">
             <div class="container">
                 <h1 hidden>Job filter</h1>
                 <ul class="list-filter">
@@ -79,92 +79,109 @@
                 <ul class="list-element-filter">
                     <li class="filter-item">
                         <a href=""><img src="./images/banking-app.jpg" alt="Banking App Interface Concept" width="360"
-                                height="300"></a>
+                                height="300">
+                            <div class="project-container">
+                                <h2 class="section-subtile">Banking App Interface Concept</h2>
+                                <p class="section-paragraph">App</p>
+                            </div>
+                        </a>
 
-                        <div class="project-container">
-                            <h2 class="section-subtile">Banking App Interface Concept</h2>
-                            <p class="section-paragraph">App</p>
-                        </div>
+
 
                     </li>
                     <li class="filter-item">
                         <a href=""> <img src="./images/cashless-payment.jpg" alt=" qr code payment by phone" width="360"
-                                height="300"></a>
+                                height="300">
+                            <div class="project-container">
+                                <h2 class="section-subtile">Cashless Payment</h2>
+                                <p class="section-paragraph">Marketing</p>
+                            </div>
+                        </a>
 
-                        <div class="project-container">
-                            <h2 class="section-subtile">Cashless Payment</h2>
-                            <p class="section-paragraph">Marketing</p>
-                        </div>
+
 
                     </li>
                     <li class="filter-item">
                         <a href=""><img src="./images/meditation-app.jpg" alt="medetation app for phone and laptop"
-                                width="360" height="300"></a>
+                                width="360" height="300">
+                            <div class="project-container">
+                                <h2 class="section-subtile">Meditaion App</h2>
+                                <p class="section-paragraph"> App</p>
+                            </div>
+                        </a>
 
-                        <div class="project-container">
-                            <h2 class="section-subtile">Meditaion App</h2>
-                            <p class="section-paragraph"> App</p>
-                        </div>
+
 
                     </li>
                     <li class="filter-item">
                         <a href=""><img src="./images/taxi-service.jpg" alt="app for taxi in the car" width="360"
-                                height="300"></a>
+                                height="300">
+                            <div class="project-container">
+                                <h2 class="section-subtile">Taxi Service</h2>
+                                <p class="section-paragraph"> Marketing</p>
+                            </div>
+                        </a>
 
-                        <div class="project-container">
-                            <h2 class="section-subtile">Taxi Service</h2>
-                            <p class="section-paragraph"> Marketing</p>
-                        </div>
+
 
                     </li>
                     <li class="filter-item">
                         <a href=""><img src="./images/screen-illustrations.jpg" alt="screen illustrations on the phone"
-                                width="360" height="300"></a>
+                                width="360" height="300">
+                            <div class="project-container">
+                                <h2 class="section-subtile">Screen Illustrations</h2>
+                                <p class="section-paragraph">Design</p>
+                            </div>
+                        </a>
 
-                        <div class="project-container">
-                            <h2 class="section-subtile">Screen Illustrations</h2>
-                            <p class="section-paragraph">Design</p>
-                        </div>
+
 
 
                     </li>
                     <li class="filter-item">
                         <a href=""><img src="./images/online-courses.jpg" alt="the girl conducts an online course"
-                                width="360" height="300"></a>
+                                width="360" height="300">
+                            <div class="project-container">
+                                <h2 class="section-subtile">Online Courses</h2>
+                                <p class="section-paragraph"> Marketing</p>
+                            </div>
+                        </a>
 
-                        <div class="project-container">
-                            <h2 class="section-subtile">Online Courses</h2>
-                            <p class="section-paragraph"> Marketing</p>
-                        </div>
+
 
                     </li>
                     <li class="filter-item">
                         <a href=""><img src="./images/inst-stories.jpg" alt="Instagram Stories Concept" width="360"
-                                height="300"></a>
+                                height="300">
+                            <div class="project-container">
+                                <h2 class="section-subtile">Instagram Stories Concept</h2>
+                                <p class="section-paragraph">Design</p>
+                            </div>
+                        </a>
 
-                        <div class="project-container">
-                            <h2 class="section-subtile">Instagram Stories Concept</h2>
-                            <p class="section-paragraph">Design</p>
-                        </div>
 
-                    </li>
-                    <li class="filter-item">
-                        <a href=""> <img src="./images/organic-food.jpg" alt="Organic Food" width="360"
-                                height="300"></a>
-
-                        <div class="project-container">
-                            <h2 class="section-subtile">Organic Food</h2>
-                            <p class="section-paragraph">Web Site</p>
-                        </div>
 
                     </li>
                     <li class="filter-item">
-                        <a href=""><img src="./images/fresh-coffe.jpg" alt="making coffe" width="360" height="300"></a>
+                        <a href=""> <img src="./images/organic-food.jpg" alt="Organic Food" width="360" height="300">
+                            <div class="project-container">
+                                <h2 class="section-subtile">Organic Food</h2>
+                                <p class="section-paragraph">Web Site</p>
+                            </div>
+                        </a>
 
-                        <div class="project-container">
-                            <h2 class="section-subtile">Fresh Coffee</h2>
-                            <p class="section-paragraph">Web Site</p>
-                        </div>
+
+
+                    </li>
+                    <li class="filter-item">
+                        <a href=""><img src="./images/fresh-coffe.jpg" alt="making coffe" width="360" height="300">
+                            <div class="project-container">
+                                <h2 class="section-subtile">Fresh Coffee</h2>
+                                <p class="section-paragraph">Web Site</p>
+                            </div>
+                        </a>
+
+
 
                     </li>
                 </ul>
